Page new account (portal) was not readable on iPad of iPhone. Some css changes made to fix this.

--- a/customer-portal-app/src/css/econobis-portal.css
+++ b/customer-portal-app/src/css/econobis-portal.css
@@ -488,6 +488,10 @@ header .header-logo {
 .logo-container {
     max-width: 200px;
 }
+.logo-container-small {
+    max-width: 150px;
+    margin-bottom: 10px;
+}
 
 /* ----------------- DROPDOWN USER STYLING -----------------*/
 .dropdown-toggle {
